# Nuevos Microservicios/Gestion_Matriculas/GestionMatriculas/app/apimodels/CreditosAlumno.java
@@ -17,9 +17,6 @@ public class CreditosAlumno   {
 
   @JsonProperty("CreditosTransversales")
   private Integer creditosTransversales = null;
-  
-  @JsonProperty("CreditosOptativosExtra")
-  private Integer creditosOptativosExtra = null;
 
   public CreditosAlumno creditosObligatorios(Integer creditosObligatorios) {
     this.creditosObligatorios = creditosObligatorios;
@@ -74,24 +71,6 @@ public class CreditosAlumno   {
   public void setCreditosTransversales(Integer creditosTransversales) {
     this.creditosTransversales = creditosTransversales;
   }
-  
-  public CreditosAlumno creditosOptativosExtra(Integer creditosOptativosExtra) {
-    this.creditosOptativosExtra = creditosOptativosExtra;
-    return this;
-  }
-
-   /**
-   * Get creditosOptativosExtra
-   * @return creditosOptativosExtra
-  **/
-    @NotNull
-  public Integer getCreditosOptativosExtra() {
-    return creditosOptativosExtra;
-  }
-
-  public void setCreditosOptativosExtra(Integer creditosOptativosExtra) {
-    this.creditosOptativosExtra = creditosOptativosExtra;
-  }
 
 
   @Override
@@ -105,13 +84,12 @@ public class CreditosAlumno   {
     CreditosAlumno creditosAlumno = (CreditosAlumno) o;
     return Objects.equals(this.creditosObligatorios, creditosAlumno.creditosObligatorios) &&
         Objects.equals(this.creditosOptativos, creditosAlumno.creditosOptativos) &&
-        Objects.equals(this.creditosTransversales, creditosAlumno.creditosTransversales) &&
-        Objects.equals(this.creditosOptativosExtra, creditosAlumno.creditosOptativosExtra);
+        Objects.equals(this.creditosTransversales, creditosAlumno.creditosTransversales);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(creditosObligatorios, creditosOptativos, creditosTransversales, creditosOptativosExtra);
+    return Objects.hash(creditosObligatorios, creditosOptativos, creditosTransversales);
   }
 
   @Override
@@ -122,7 +100,6 @@ public class CreditosAlumno   {
     sb.append("    creditosObligatorios: ").append(toIndentedString(creditosObligatorios)).append("\n");
     sb.append("    creditosOptativos: ").append(toIndentedString(creditosOptativos)).append("\n");
     sb.append("    creditosTransversales: ").append(toIndentedString(creditosTransversales)).append("\n");
-    sb.append("    creditosOptativosExtra: ").append(toIndentedString(creditosOptativosExtra)).append("\n");
     sb.append("}");
     return sb.toString();
   }
