# Nuevos Microservicios/Gestion_Matriculas/GestionMatriculas/public/swagger.json
@@ -287,11 +287,7 @@
         },
         "CreditosTransversales" : {
           "type" : "integer"
-        },
-        "CreditosOptativosExtra" : {
-          "type" : "integer"
         }
-        
       }
     }
   }
